--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@ngrx/entity": "^13.2.0",
     "@ngrx/store": "^13.2.0",
     "@ngrx/store-devtools": "^13.2.0",
+    "@types/lodash": "^4.14.182",
     "core-js": "2.6.2",
+    "lodash": "^4.17.21",
     "rxjs": "^6.6.7",
     "sass": "^1.38.1",
     "zone.js": "~0.11.4"
